# picvoter-backend

./: .env  .gitignore  Cargo.toml  Dockerfile
migrations/: 20220826134044_images.sql
src/: main.rs
