[package]
name = "picvoter-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
twox-hash = "1.6.3"
log = "0.4.17"
env_logger = "0.9.0"
console = "0.15.1"
anyhow = "1.0.62"
image = "0.24.3"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
tokio = { version = "1.18.2", features = ["full"] }
ulid = "1.0.0"
rocket_cors = "0.5.1"
rand = "0.8.5"
